--- a/frontend/react-app/src/pages/container_in/Container_In.css
+++ b/frontend/react-app/src/pages/container_in/Container_In.css
@@ -56,5 +56,20 @@ form{
     margin-left: 20px;
 }
 
+.grid{
+    width: 100%;
+}
+
+.grid-col1{
+    width: 50%
+}
+
+.grid-col2{
+    width: 100%
+}
+
+.title{
+    margin-bottom: 30px;
+}
 
     
