--- a/frontend/react-app/src/pages/container_out/Container_Out.css
+++ b/frontend/react-app/src/pages/container_out/Container_Out.css
@@ -5,3 +5,64 @@
     margin-left: 20px;
     margin-right: 20px;
 }
+
+.buttonCheck{
+    width: 100%;
+    height: 38px;
+    border: none;
+    background-color: blue;
+    color: white;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 10px;
+    float: left;
+}
+
+.buttonCheck:hover{
+    background-color: #0066ff;
+}
+
+.formInputPage2{
+    display: inline-block;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 10px;
+
+}
+
+.label{
+    margin-right: 10px;
+}
+
+.inputBox{
+    width: 20%
+}
+
+.rectangle{
+    border-color: darkblue;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    width: 48%;
+    height: 90%;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.container_in_box{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    height: 75%;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.boxHeading{
+    display:flex;
+    justify-content: center;
+}
+
