--- a/frontend/react-app/src/pages/container_out/Container_Out.css
+++ b/frontend/react-app/src/pages/container_out/Container_Out.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 38px;
     border: none;
-    background-color: blue;
+    background-color: rgb(250, 29, 29);
     color: white;
     border-radius: 10px;
     font-weight: bold;
@@ -42,14 +42,24 @@
 }
 
 .rectangle{
-    border-color: darkblue;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 10px;
+    
     width: 48%;
     height: 90%;
     display: inline-block;
     margin-top: 20px;
+    justify-content: center;
+}
+
+.rectangle_heading{
+    width: 100%;
+    height: 30px;
+    background-color: darkblue;
+    border-style: none;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 .container_in_box{
@@ -64,5 +74,66 @@
 .boxHeading{
     display:flex;
     justify-content: center;
+    font-family: sans-serif;
+    color: white;
 }
+
+.boxContent{
+    margin-top: 10px;
+    margin-left: 10px;
+    display: flex;
+}
+
+.t1{
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 14px;
+    padding: 5px;
+    width: 80px;
+}
+
+.t2{
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 14px;
+    padding: 5px;
+    width: 30px;
+}
+
+.v1{
+    font-family: sans-serif;
+    font-size: 14px;
+    margin-right: 10px;
+    border-style: solid;
+    border-color: rgb(163, 162, 162);
+    border-radius: 5px;
+    padding: 5px;
+    border-width: 0.5px;
+    width: 100px;
+}
+
+.v2{
+    font-family: sans-serif;
+    font-size: 14px;
+    margin-right: 10px;
+    border-style: solid;
+    border-color: rgb(163, 162, 162);
+    border-radius: 5px;
+    padding: 5px;
+    border-width: 0.5px;
+    width: 310px;
+}
+
+.v3{
+    font-family: sans-serif;
+    font-size: 14px;
+    margin-right: 10px;
+    border-style: solid;
+    border-color: rgb(163, 162, 162);
+    border-radius: 5px;
+    padding: 5px;
+    border-width: 0.5px;
+    width: 30px;
+}
+
 
