--- a/frontend/react-app/src/component/forms/FormLabel.css
+++ b/frontend/react-app/src/component/forms/FormLabel.css
@@ -1,8 +1,28 @@
 .formLabel{
     display: flex;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    flex-direction: column;
 }
 
-.middle{
+.heading{
+    font-weight: bold;
     font-family: sans-serif;
-    padding: 5px;
+    font-size: 14px;
+    color: black;
+    margin-bottom: 10px;
+}
+
+.labelBorder{
+    font-family: sans-serif;
+    font-size: 14px;
+    margin-right: 10px;
+    border-style: solid;
+    border-color: rgb(206, 206, 206);
+    border-radius: 5px;
+    padding: 10.5px;
+    border-width: 0.5px;
+    min-height: 16px;
+    max-height: 32px;
+
 }
