--- a/frontend/react-app/src/pages/container_out/Container_Out.css
+++ b/frontend/react-app/src/pages/container_out/Container_Out.css
@@ -17,13 +17,34 @@
     font-size: 18px;
     cursor: pointer;
     text-align: center;
+    margin-top: 30px;
+    margin-left: 10px;
+    
+}
+
+.buttonSubmit{
+    width: 50%;
+    height: 40px;
+    border: none;
+    background-color: blue;
+    color: white;
+    border-radius: 10px;
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 18px;
+    cursor: pointer;
+    text-align: center;
     margin-top: 10px;
-    float: left;
 }
 
 .buttonCheck:hover{
+    background-color: #e95e6a;
+}
+
+.buttonSubmit:hover{
     background-color: #0066ff;
 }
+
 
 .formInputPage2{
     display: inline-block;
@@ -33,42 +54,34 @@
 
 }
 
-.label{
-    margin-right: 10px;
-}
-
-.inputBox{
-    width: 20%
-}
-
-.rectangle{
-    
-    width: 48%;
-    height: 90%;
-    display: inline-block;
-    margin-top: 20px;
-    justify-content: center;
-}
-
 .rectangle_heading{
     width: 100%;
     height: 30px;
-    background-color: darkblue;
+    background-color: rgb(55, 55, 55);
     border-style: none;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+}
+
+.rectangle_heading2{
+    width: 100%;
+    height: 30px;
+    background-color: rgb(55, 55, 55);
+    border-style: none;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 .container_in_box{
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    height: 75%;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 30px;
+
 }
 
 .boxHeading{
@@ -78,62 +91,15 @@
     color: white;
 }
 
-.boxContent{
-    margin-top: 10px;
-    margin-left: 10px;
-    display: flex;
-}
 
-.t1{
+
+
+
+
+.labelOut{
     font-weight: bold;
     font-family: sans-serif;
     font-size: 14px;
-    padding: 5px;
-    width: 80px;
-}
-
-.t2{
-    font-weight: bold;
-    font-family: sans-serif;
-    font-size: 14px;
-    padding: 5px;
-    width: 30px;
-}
-
-.v1{
-    font-family: sans-serif;
-    font-size: 14px;
-    margin-right: 10px;
-    border-style: solid;
-    border-color: rgb(163, 162, 162);
-    border-radius: 5px;
-    padding: 5px;
-    border-width: 0.5px;
-    width: 100px;
-}
-
-.v2{
-    font-family: sans-serif;
-    font-size: 14px;
-    margin-right: 10px;
-    border-style: solid;
-    border-color: rgb(163, 162, 162);
-    border-radius: 5px;
-    padding: 5px;
-    border-width: 0.5px;
-    width: 310px;
-}
-
-.v3{
-    font-family: sans-serif;
-    font-size: 14px;
-    margin-right: 10px;
-    border-style: solid;
-    border-color: rgb(163, 162, 162);
-    border-radius: 5px;
-    padding: 5px;
-    border-width: 0.5px;
-    width: 30px;
 }
 
 
