--- a/frontend/react-app/src/pages/cont_rsv/ContainerReservation.css
+++ b/frontend/react-app/src/pages/cont_rsv/ContainerReservation.css
@@ -35,3 +35,11 @@
     position: relative;
     margin-left: 25%;
 }
+
+.subHeading{
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 10px;
+    margin-top: 20px;
+    font-family: sans-serif;
+}
